--- a/undervisningsopgaver/bistro_babushka/bistro.css
+++ b/undervisningsopgaver/bistro_babushka/bistro.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -10,7 +10,7 @@ body {
 
 header {
   background-color: rgb(243, 142, 26);
-  /* height: 100%; */
+  height: 100%;
   padding: 5rem;
 }
 
@@ -75,7 +75,7 @@ footer section {
   grid-template-columns: repeat(3, 1fr);
   padding: 10px;
   overflow: hidden;
-}
+} */
 /* body {
   background-color: #f2f2f2;
 }
@@ -116,3 +116,105 @@ article {
   font-weight: bold;
   font-size: 1.2rem;
 } */
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+body {
+  background-color: orange;
+}
+
+header {
+  background-color: rgb(243, 142, 26);
+  height: 100%;
+  padding: 5rem;
+}
+header h1 {
+  text-align: center;
+  font-size: 5rem;
+}
+img {
+  max-width: 100%;
+  height: 250px;
+  object-fit: cover;
+}
+nav {
+  padding: 1%;
+  border: 0.5px solid black;
+  background-color: rgb(255, 255, 255);
+}
+
+button {
+  font-size: 1.5rem;
+  border: 3px solid rgb(255, 128, 0);
+  border-radius: 2rem;
+  background-color: rgb(254, 194, 124);
+  padding: 0.7rem;
+  margin: 0.7rem;
+}
+
+button:hover {
+  border: 3px solid rgb(254, 194, 124);
+  background-color: rgb(255, 128, 0);
+  color: white;
+}
+
+main {
+  padding-left: 15%;
+  padding-right: 15%;
+}
+
+footer {
+  background-color: rgb(255, 255, 255);
+}
+
+footer section {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 10px;
+  overflow: hidden;
+}
+.dish_container {
+  display: grid;
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax(280px, 1fr)
+  );
+
+  gap: 1rem;
+}
+article {
+  box-sizing: border-box;
+  padding: 1rem;
+  background: #fff9;
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+}
+article div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background: #fff9;
+  margin: -50px 0 0 0;
+  min-height: 250px;
+  padding-inline: 10px;
+}
+.single div {
+  min-height: auto;
+  padding-block: 20px;
+}
+.single div h2 {
+  padding-bottom: 20px;
+}
+
+article:nth-child(odd) {
+  background: #fff6;
+}
+.valgt {
+  border: 3px solid rgb(254, 194, 124);
+  background-color: rgb(255, 128, 0);
+  color: white;
+}
