--- a/undervisningsopgaver/bistro_babushka/bistro.css
+++ b/undervisningsopgaver/bistro_babushka/bistro.css
@@ -162,20 +162,10 @@ button:hover {
 }
 
 main {
-  padding-left: 15%;
-  padding-right: 15%;
+  padding-left: 10rem;
+  padding-right: 10rem;
 }
 
-footer {
-  background-color: rgb(255, 255, 255);
-}
-
-footer section {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  padding: 10px;
-  overflow: hidden;
-}
 .dish_container {
   display: grid;
   grid-template-columns: repeat(
@@ -183,12 +173,12 @@ footer section {
     minmax(280px, 1fr)
   );
 
-  gap: 1rem;
+  gap: 4rem;
 }
 article {
   box-sizing: border-box;
-  padding: 1rem;
-  background: #fff9;
+  padding: 1.5rem;
+  background: rgba(255, 255, 255, 0.67);
   display: flex;
   flex-direction: column;
   cursor: pointer;
@@ -197,7 +187,7 @@ article div {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background: #fff9;
+  background: rgba(255, 255, 255, 0.67);
   margin: -50px 0 0 0;
   min-height: 250px;
   padding-inline: 10px;
@@ -217,4 +207,15 @@ article:nth-child(odd) {
   border: 3px solid rgb(254, 194, 124);
   background-color: rgb(255, 128, 0);
   color: white;
+}
+
+footer {
+  background-color: rgb(255, 255, 255);
+}
+
+footer section {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 10px;
+  overflow: hidden;
 }
