--- a/undervisningsopgaver/bistro_babushka/bistro.css
+++ b/undervisningsopgaver/bistro_babushka/bistro.css
@@ -1,122 +1,3 @@
-/* * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-body {
-  background-color: orange;
-}
-
-header {
-  background-color: rgb(243, 142, 26);
-  height: 100%;
-  padding: 5rem;
-}
-
-header h1 {
-  text-align: center;
-  font-size: 5rem;
-}
-
-img {
-  max-width: 100%;
-  height: 250px;
-  object-fit: cover;
-}
-
-nav {
-  padding: 1%;
-  border: 0.5px solid black;
-  background-color: rgb(255, 255, 255);
-}
-
-button {
-  font-size: 1.5rem;
-  border: 3px solid rgb(255, 128, 0);
-  border-radius: 2rem;
-  background-color: rgb(254, 194, 124);
-  padding: 0.7rem;
-  margin: 0.7rem;
-}
-
-button:hover {
-  border: 3px solid rgb(254, 194, 124);
-  background-color: rgb(255, 128, 0);
-  color: white;
-}
-
-main {
-  padding-left: 15%;
-  padding-right: 15%;
-}
-
-#menuoverview {
-  padding-top: 1.2rem;
-  padding-bottom: 1.5rem;
-}
-
-.dish_container {
-  display: grid;
-  grid-template-columns: repeat(
-    auto-fill,
-    minmax(300px, 1fr)
-  );
-  gap: 1rem;
-  place-content: center;
-}
-
-footer {
-  background-color: rgb(255, 255, 255);
-}
-
-footer section {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  padding: 10px;
-  overflow: hidden;
-} */
-/* body {
-  background-color: #f2f2f2;
-}
-
-section {
-  display: grid;
-  grid-template-columns: repeat(
-    auto-fill,
-    minmax(300px, 1fr)
-  );
-  gap: 20px;
-  margin: 0 10rem 0 10rem;
-  place-content: center;
-}
-
-h1 {
-  text-align: center;
-  color: orange;
-  font-size: 3rem;
-}
-
-h2 {
-  padding-left: 1rem;
-  color: #ff00ec;
-}
-
-p {
-  padding-left: 1rem;
-  color: #f2f2f2;
-}
-
-article {
-  background-color: #221bf2;
-}
-
-.pris {
-  color: #f1c4f2;
-  font-weight: bold;
-  font-size: 1.2rem;
-} */
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -135,6 +16,11 @@ header h1 {
   text-align: center;
   font-size: 5rem;
 }
+
+h1#headline {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
 img {
   max-width: 100%;
   height: 250px;
@@ -144,6 +30,10 @@ nav {
   padding: 1%;
   border: 0.5px solid black;
   background-color: rgb(255, 255, 255);
+}
+
+p.pris {
+  font-weight: bold;
 }
 
 button {
@@ -191,7 +81,7 @@ main {
 }
 article {
   box-sizing: border-box;
-  padding: 1.5rem;
+  padding: 1rem;
   background: rgba(255, 255, 255, 0.67);
   display: flex;
   flex-direction: column;
@@ -203,19 +93,12 @@ article div {
   justify-content: space-between;
   background: rgba(255, 255, 255, 0.67);
   margin: -50px 0 0 0;
-  min-height: 250px;
-  padding-inline: 10px;
-}
-.single div {
-  min-height: auto;
-  padding-block: 20px;
-}
-.single div h2 {
-  padding-bottom: 20px;
+  min-height: 10rem;
+  padding-inline: 1rem;
 }
 
 article:nth-child(odd) {
-  background: #fff6;
+  background: rgba(1, 1, 1, 0.218);
 }
 .valgt {
   border: 3px solid rgb(254, 194, 124);
@@ -230,6 +113,9 @@ footer {
 footer section {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  padding: 10px;
+  padding-left: 10rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+
   overflow: hidden;
 }
